--- a/exp/custom_referral/custom_b16_f8x224/config.yaml
+++ b/exp/custom_referral/custom_b16_f8x224/config.yaml
@@ -5,6 +5,10 @@ TRAIN:
   EVAL_PERIOD: 1
   CHECKPOINT_PERIOD: 5
   AUTO_RESUME: True
+  CHECKPOINT_FILE_PATH: ""
+  CHECKPOINT_TYPE: "pytorch"
+  CHECKPOINT_INFLATE: False
+  CHECKPOINT_EPOCH_RESET: True
 DATA:
   USE_OFFSET_SAMPLING: True
   DECODING_BACKEND: pyav
@@ -16,6 +20,8 @@ DATA:
   INPUT_CHANNEL_NUM: [3]
   PATH_LABEL_SEPARATOR: " "
 UNIFORMERV2:
+  PRETRAIN: ""
+  DELETE_SPECIAL_HEAD: True
   BACKBONE: 'uniformerv2_b16'
   N_LAYERS: 4
   N_DIM: 768
